--- a/index.html
+++ b/index.html
@@ -31,6 +31,13 @@
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the array.
     // 🧠 As you have done in the past, declare a variable before you start looping, to accumulate the result.
     function sumNumsFor(nums) {
+      for (i = 0; i <= nums.length; i++ ) {
+        if (nums[i] === undefined) {
+          return 0;
+        } else if (nums[i] === 13) {
+          return "I'm too superstitious!"
+        } else if ()
+      }
 
     }
 
