--- a/index.html
+++ b/index.html
@@ -31,12 +31,28 @@
     // 🧠 There are many ways to solve this, but practice using a for loop to iterate over the array.
     // 🧠 As you have done in the past, declare a variable before you start looping, to accumulate the result.
     function sumNumsFor(nums) {
+      let totalOne = 0;
+      let total = 0;
       for (i = 0; i <= nums.length; i++ ) {
         if (nums[i] === undefined) {
           return 0;
         } else if (nums[i] === 13) {
           return "I'm too superstitious!"
-        } else if ()
+        } else if (typeof(nums[i] === " ")) {
+          nums[i].pop;
+          while (i < nums.length) {
+              totalOne = totalOne + nums[i];
+              i++
+            }
+          return totalOne
+        } else if (typeof(nums[i] === " ")) {
+            while (i < nums.length) {
+              total = total + nums[i];
+              i++
+            }
+          return total;
+        } 
+        
       }
 
     }
